# ml-battlesnake

./: .gitignore  .gitmodules  README.md  makefile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
common/: model.py  paths.py
configurations/: untimely-neglected-wearables-duel.yaml
entrypoint/: __main__.py  configuration.py  model.py  paths.py
entrypoints/: __main__.py  dqn_duels_demo.py  model.py  paths.py  ppo.py  ppo_demo.py  ppo_duels_demo.py  ppo_solo_demo.py  production.py  production_demo.py
environment/: __init__.py  adapters.py  configuration.py  engines.py  env.py  environment_.py  memory.py  observation_transformers.py  reward_functions.py  rules.py  types.py
environment/battlesnake/: engine_adapters.py  engines.py
environment/envs/: base_env.py  duels_v0.py  lava_bridges_v0.py  maze_v0.py  solo_v0.py  standard_v0.py  wrapped_chaos_v0.py
environment/spaces/: move.py
environment/types/: battlesnake_options.py
ml_battlesnake/common/: paths.py
ml_battlesnake/deployment/: README.md  model.py
ml_battlesnake/deployment/snakes/: README.md
ml_battlesnake/learning/: README.md
ml_battlesnake/learning/environment/: __init__.py  adapters.py  engines.py  env.py  memory.py  observation_transformers.py  reward_functions.py  types.py
ml_battlesnake/learning/game-engine-as-dll/: LICENSE.md  README.md  main.go
scripts/: deploy-dev-demo.py  deploy_dev_demo.py  ppo.py
test/common/: test_model.py
test/entrypoint/: test_configuration.py  test_model.py
test/entrypoints/: test_model.py
tests/deployment/: test_model.py
tests/learning/environment/: test_observation_transformers.py
