[tool.poetry]
name = "ml-battlesnake"
version = "0.1.0"
description = "Playing Battlesnake with machine learning"
authors = ["Callum Curtis <105407637+callumcurtis@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_battlesnake"}]

[tool.poetry.dependencies]
python = "==3.10.6"
setuptools = "==65.5.0"
psutil = "==5.8.0"
PettingZoo = "==1.22.3"
torch = "==1.13.1"
flask = "==2.2.3"
SuperSuit = { git = "https://github.com/callumcurtis/supersuit.git", branch = "ml-battlesnake" }
tensorboard = "==2.11.2"
wheel = "<0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "==7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"